--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&family=Raleway:wght@500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cousine:wght@700&display=swap');
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -27,4 +28,10 @@ body {
 
 .icon-white > svg > polyline {
   stroke: '#fff';
+}
+.close-btn {
+  font-family: 'Cousine', monospace;
+  font-weight: 700;
+  font-stretch: expanded;
+  font-size: 20px;
 }
